# jojo

./: bashrc  check.sh  corb.sh  core.c  fromprivate.sh  mkaut.sh  mkfile.sh  mywc.sh  priv.sh  ski  toprivate.sh  vimc.sh  vimrc
TP1/: tp1  tp1.c  tp1q1.trace  tp1q2.trace  tp1q3.trace  trace
assos_test/: manage.py
assos_test/assos_test/: settings.py  urls.py  wsgi.py
automates/: automate.h  automates.c
backup/depott_g-cpp-d1/: AUTHORS  README  TODO
backup/depott_g-cpp-d1/compression/: inputfile.txt  test-compression.cc
backup/depott_g-cpp-d1/const/: person.cc  person.hh  test-person.cc
backup/depott_g-cpp-d1/matrix/: matrix.cc  matrix.hh
backup/depott_g-cpp-d1/replace/: input.txt  replace.cc  replace.hh
backup/depott_g-cpp-d2/: README  TODO
backup/depott_g-cpp-d2/robots/: armored-robot.cc  armored-robot.hh  robot-agency.cc  robot-agency.hh  robot-fighter.cc  robot-fighter.hh  robot.hh  rocket-robot.cc  rocket-robot.hh
backup/depott_g-cpp-d3/: README  TODO
backup/depott_g-cpp-d3/computer_shop/: computer.cc  computer.hh  shop.hh  shop.hxx
backup/depott_g-cpp-d4-revising/: AUTHORS  README  TODO
backup/depott_g-cpp-d4-revising/bst/: a.out  bst.hh  bst.hxx  bst_node.hh  bst_node.hxx  test.cc
backup/depott_g-db-d4/: README  TODO
backup/depott_g-libbistro/: Makefile  README  TODO  libbistro-example.cc
backup/depott_g-logomatig/: README  TODO
backup/depott_g-malloc/: .gitignore  TODO
backup/depott_g-my-read-iso/: mapper  mapper.c
backup/depott_g-myfind/: Makefile  TODO
backup/depott_g-myhttpd/: .gitignore  AUTHORS  CMakeLists.txt  README  TODO
backup/depott_g-myhttpd/src/: main.cc
backup/depott_g-myhttpd/src/exception/: accept-fail-exception.cc  accept-fail-exception.hh  add-fail-exception.cc  add-fail-exception.hh  epoll-create-exception.cc  epoll-create-exception.hh  epoll-ctl-exception.cc  epoll-ctl-exception.hh  global-exception.cc  global-exception.hh  missing-parameter-exception.cc  missing-parameter-exception.hh  wait-fail-exception.cc  wait-fail-exception.hh
backup/depott_g-myhttpd/src/host/: host.cc  host.hh
backup/depott_g-myhttpd/src/parser/: parser.cc  parser.hh
backup/depott_g-myhttpd/src/response/: http_response.cc  http_response.hh
backup/depott_g-myhttpd/src/server/: server.cc  server.hh
backup/depott_g-myhttpd/src/signal_test/: handler.cc
backup/depott_g-myhttpd/src/socket/: socket.cc  socket.hh
backup/depott_g-myhttpd/src/thread_pool/: thread_pool.cc  thread_pool.hh  thread_pool.hxx
backup/depott_g-myhttpd/src/toml/: toml.hpp  toml_parser.hpp
backup/depott_g-myhttpd/tests/: empty_log_file.conf  invalid_ip.conf  invalid_port.conf  invalid_root_dir.conf  invalid_server_name.conf  no_log.conf  standard.conf  ten_servers.conf
backup/depott_g-piscine-p0/: README  TODO
backup/depott_g-piscine-p1/: README
backup/depott_g-piscine-p2/: README  TODO
backup/depott_g-raytracer/: AUTHORS  README
backup/depott_g-rush-c/: AUTHORS  Makefile
backup/depott_g-rushdb/: README  TODO
backup/xavier-fichter-my-bittorrent/: Makefile.am  README  TODO  bootstrap
backup/xavier-fichter-my-bittorrent/src/: bittorrent.c  bittorrent.h  list.c  mystr.c  torrent_parsing.c
backup/zhao_d-42sh/: .42shrc  AUTHORS  CMakeLists.txt  README  TODO
backup/zhao_d-42sh/doc/: 42sh.1  Doxyfile
backup/zhao_d-42sh/src/: 42sh.c  42sh.h
backup/zhao_d-42sh/src/grammar_check/: Makefile  check_case.c  check_commands.c  check_dogroup.c  check_helper.c  check_if.c  check_loop.c  check_single_element.c  grammar_check.c  grammar_check.h
backup/zhao_d-42sh/src/lexer/: Makefile  lexer.c  lexer.h
backup/zhao_d-42sh/src/parser/: builtin.c  builtin.h  executer.c  parser.c  parser.h  subparser_declaration.c  subparser_expression.c  subparser_for.c  subparser_if.c  subparser_not.c  subparser_pipe.c  subparser_redirection.c  subparser_string.c  subparser_until.c  subparser_while.c
backup/zhao_d-42sh/src/prompt/: advanced_prompt.c  advanced_prompt.h  prompt.c  prompt.h
backup/zhao_d-42sh/src/variables/: variables.c  variables.h
backup/zhao_d-42sh/tests/: test.rb  testlist
backup/zhao_d-42sh/tests/echo/: test.test
backup/zhao_d-42sh/tests/for/: for.test
backup/zhao_d-42sh/tests/if/: if.test
backup/zhao_d-42sh/tests/misc/: misc.test
commands/: bashrc  check.sh  chmodc.sh  compcom.sh  corb.sh  counterr.sh  deploy-docker.sh  editig.sh  gccdb.sh  gitconfig  massclone.sh  mk.sh  mkansible.sh  mktest.sh  mktig.sh  tg.sh  tmp  vimc.sh  vimrc  wikicount.sh
depott_g-myfind/: accu  accu.c  accu.h  theory
disgusting/: disgusting_sort.c
django_test/django_test/: db.sqlite3
grammar_tester/: grammar_tester.py
java/mySerializer/: Main.java  Person.java
java/reflection/: Main.java  Useless.java
oldies/depott_g-formula-one/: CMakeLists.txt  README  TODO
oldies/depott_g-malloc/: Makefile  README
oldies/depott_g-my-read-iso/: include.h
oldies/depott_g-myfind/: README
oldies/depott_g-raytracer/: TODO
oldies/depott_g-rush-c/: README  TODO
oldies/xavier-fichter-my-bittorrent/: AUTHORS  configure.ac
rapport/: logo.mdx
ubep/theory/: grammar
wiki_statsmaker/: wiki_statsmaker.sh
(+184 files in other folders)
